Can add news lists and change book status

--- a/less/site.less
+++ b/less/site.less
@@ -1,3 +1,47 @@
 body {
-    color:red;
+  color:black;
+  background-color: tan;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
+div.booklist {
+  float: left;
+}
+
+ul {
+  list-style: none;
+}
+
+ul {
+  li{
+    cursor: Pointer;
+    border-radius: 10px;
+    padding: 4px;
+    margin: 2px;
+    -webkit-user-select: none;
+    width: 250px;
+    min-height: 40px;
+  }
+  .unread {
+    color: White;
+    background-color: teal;
+  }
+  .reading {
+    color: White;
+    background-color: #7EAB6F;
+  }
+  .read {
+    color: #666;
+    background-color: #8A979C;
+  }
+  span {
+    display: inline-block;
+  }
+}
+
+
+div.book-button {
+  float: right;
 }
