Filter stacks by keyword; layout navigation changes

--- a/less/site.less
+++ b/less/site.less
@@ -1,9 +1,7 @@
 body {
   color:black;
   background-color: tan;
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 20px;
 }
 
 div.booklist {
