--- a/less/site.less
+++ b/less/site.less
@@ -1,45 +1,53 @@
 body {
-  color:black;
-  background-color: tan;
-  margin-left: 20px;
+	color:black;
+	background-color: tan;
+	margin-left: 20px;
 }
 
 div.booklist {
-  float: left;
+	float: left;
 }
 
 ul {
-  list-style: none;
+	list-style: none;
 }
 
 ul {
-  li{
-    cursor: Pointer;
-    border-radius: 10px;
-    padding: 4px;
-    margin: 2px;
-    -webkit-user-select: none;
-    width: 250px;
-    min-height: 40px;
-  }
-  .unread {
-    color: White;
-    background-color: teal;
-  }
-  .reading {
-    color: White;
-    background-color: #7EAB6F;
-  }
-  .read {
-    color: #666;
-    background-color: #8A979C;
-  }
-  span {
-    display: inline-block;
-  }
+	li{
+		cursor: Pointer;
+		border-radius: 10px;
+		padding: 4px;
+		margin: 2px;
+		-webkit-user-select: none;
+		width: 250px;
+		min-height: 40px;
+	}
+	.unread {
+		color: White;
+		background-color: teal;
+	}
+	.reading {
+		color: White;
+		background-color: #7EAB6F;
+	}
+	.read {
+		color: #666;
+		background-color: #8A979C;
+	}
+	span {
+		display: inline-block;
+	}
+}
+
+
+nav {
+	li {
+		cursor: Pointer;
+		list-style: none;
+	}
 }
 
 
 div.book-button {
-  float: right;
+	float: right;
 }
