--- a/less/site.less
+++ b/less/site.less
@@ -35,6 +35,10 @@ ul {
     color: #666;
     background-color: #8A979C;
   }
+  .selected {
+    border: 3px solid #16586E;
+    padding: 1px;
+  }
   span {
     display: inline-block;
     width: 70%;
