--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -31,6 +31,10 @@ ul .read {
   color: #666;
   background-color: #8A979C;
 }
+ul .selected {
+  border: 3px solid #16586E;
+  padding: 1px;
+}
 ul span {
   display: inline-block;
   width: 70%;
